--- a/404.md
+++ b/404.md
@@ -5,7 +5,9 @@ description: "Page not found. Your pixels are in another canvas."
 comments: false
 share: false
 permalink: /404.html
----  
+sitemap:
+  exclude: "yes"
+---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
